--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ classifiers = [
 
 [project.optional-dependencies]
 tests = [
-    "pytest>=7.2.2,<8.0.0"
+    'pytest>=7.2.2,<8.0.0',
+    'pytest-cov>=4.0.0,<5.0.0'
 ]
 
 [project.scripts]
