--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dynamic = ['version']
 authors = [
     {name = 'Craig Tomkow', email = 'ctomkow@gmail.com'},
 ]
-description = 'An alais for your terminal typos'
+description = 'Aliases for your terminal typos'
 requires-python = '>=3.6'
 license = {file = 'LICENSE'}
 classifiers = [
